<resources>
    <string name="app_name">Saviour</string>
    <string name="animations_will_be_added_later">Animations will be added later</string>
    <string name="get_started">Get Started</string>
    <string name="signup_activity">SignUp Activity</string>
    <string name="saviour">Saviour</string>
    <string name="welcome">Welcome!!</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="or">Or</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome_back">Welcome back!!</string>
    <string name="forgot_password"><![CDATA[Forgot Password?]]></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="home_page">Home Page</string>
    <string name="you_are_now_logged_in_with">You are now logged in with:</string>
    <string name="none">none</string>
    <string name="logged_in_with">Logged in with:</string>
    <string name="logout">Logout</string>



    <string name="client_id">308529729728-mto7hbpp49otpsi86er96e2urafhikom.apps.googleusercontent.com</string>


</resources>